--- a/templates/about.html
+++ b/templates/about.html
@@ -1,25 +1,94 @@
 <!DOCTYPE html>
-<html id="htmlmain">
+<html id="htmlmain" lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Idol Tav</title>
+        <title>About Idol Tav</title>
         <meta name="description" content="A page about Idol Tav">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="../styles/style.css">
-        <link rel="stylesheet" href="../styles/ticketingstyle.css">
+        <link rel="stylesheet" href="../styles/about.css">
         <script src="../scripts/layout.js"></script>
     </head>
     <body>
-        <!-- Making layout of grid -->
-        <article class="gridcontainer">
-            <!-- Creating navbar using js -->
-            <script src="../scripts/nav.js" id="replace_with_navbar"></script>
-            <!-- Insert background clip here -->
-            <!-- Header -->
-            <h1>Text</h1>
-            <!-- Subtext -->
-            <h2>Subtext below header</h2>
-            <!-- Creating two carousels -->
+        <div id="trailer"></div>
+        <!-- Creating navbar -->
+        <link rel="stylesheet" href="../styles/normalize.css">
+        <link rel="stylesheet" href="../styles/mousetrailer.css">
+        <div class="navbar" id="navbar">
+            <div class="navbarelement1 navitem"><a href="index.html" class="linker" draggable="false">Home</a></div>
+            <div class="navbarelement1 navitem"><a href="ticketing.html" class="linker" draggable="false">Ticketing</a></div>
+            <div class="navbarelement1 navitem"><a href="about.html" class="linker" draggable="false">About</a></div>
+            <div class="navbarelement1 navitem"><a href="events.html" class="linker" draggable="false">Events</a></div>
+            <div class="navbarelement2 navitem"><a href="contacts.html" class="linker" draggable="false">Contacts</a></div>
+        </div>
+        <script src="../scripts/trailCreate.js"></script>
+        <!-- Header -->
+        <h2>How to make your own Idol Tav</h2>
+        <!-- Subtext -->
+        <h1>Concept Designs</h1>
+        <article class="main">
+            <p class="synopsis bg">Synopsis:
+                In the bustling world of aspiring idols, 
+                where dreams harmonize with melodies, 
+                emerges a small-time sensation named Tav. 
+                With a voice that echoes passion and a heart fueled by ambition, 
+                Tav navigates the vibrant cityscape, 
+                chasing stardom one cover at a time.
+                
+                Tav's journey unfolds against the backdrop of a close-knit community where small gigs and intimate performances set the stage for her rise. While she may be a diamond in the rough, Tav's charm lies in her authenticity, captivating audiences with each note and leaving an indelible mark on the hearts of those who witness her performances.
+                
+                Amidst the challenges of the competitive idol scene, Tav's story is a testament to resilience and the power of self-expression. From busking on street corners to sharing covers on social media, Tav's determination to carve out a space for herself in the industry resonates with anyone who has dared to dream.
+                
+                As Tav's popularity grows, 
+                she finds herself entangled in a web of friendships, 
+                rivalries, and unexpected alliances. 
+                Through it all, she discovers that the journey towards stardom is not just about reaching the top but about the people she meets along the way. Tav learns to navigate the highs and lows of fame, discovering the true essence of success lies in staying true to oneself.</p>
+                <p class="synopsis2 bg">Synopsis:
+            x        In the bustling world of aspiring idols, 
+                    where dreams harmonize with melodies, 
+                    emerges a small-time sensation named Tav. 
+                    With a voice that echoes passion and a heart fueled by ambition, 
+                    Tav navigates the vibrant cityscape, 
+                    chasing stardom one cover at a time.
+                    
+                    Tav's journey unfolds against the backdrop of a close-knit community where small gigs and intimate performances set the stage for her rise. While she may be a diamond in the rough, Tav's charm lies in her authenticity, captivating audiences with each note and leaving an indelible mark on the hearts of those who witness her performances.
+                    
+                    Amidst the challenges of the competitive idol scene, Tav's story is a testament to resilience and the power of self-expression. From busking on street corners to sharing covers on social media, Tav's determination to carve out a space for herself in the industry resonates with anyone who has dared to dream.
+                    
+                    As Tav's popularity grows, 
+                    she finds herself entangle                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                          d in a web of friendships, 
+                    rivalries, and unexpected alliances. 
+                    Through it all, she discovers that the journey towards stardom is not just about reaching the top but about the people she meets along the way. Tav learns to navigate the highs and lows of fame, discovering the true essence of success lies in staying true to oneself.</p>
+            <img class="rightImg" src="../media/beegTav.png" alt="Drawing of Tav by Iaian">
+            <p class="aboutLeft">Disclaimer, this concept is purely fictional and is only related to one intended person with their knowledge and consensus.<br><br> The concept of Idol Tav started with the design. Obviously, there were multiple designs. Originally, I first came up witha  simple design based on this banner I had.</p>
+            <section class="picNCred">
+                <h2 hidden>Inspiration 1</h2>
+                <img src="../media/Design1.jpg" class="refImg des1" alt="Design 1">
+                <p class="Elaboration">Art: Kurone Mishima, Mishima calendar series. Some works: Konosuba, Akashic Records</p>
+            </section>
+            <h2 hidden>Inspiration Exposition</h2>
+            <p class="aboutLeft expo">///////////////////<br>A dark theme was used to portray a dark theme while the fair skin and white hair was to show that her external features were white (pure). However, instead of that shirt, it was planned to have a pure black long dress, while being taller and older.</p>
+            <br><br><br>
+            <p class="aboutRight">A second design came up to compare to the first. As there were no references this time, here was the version 1 sketch.</p>
+            <section class="picNCred leftS">
+                <h2 hidden>Design number 2</h2>
+                <img src="../media/IdolTavSketchv1.png" class="refImg des2" alt="Design 2">
+                <p class="Elaboration">Art: Me. What else did you expect? I'm a terrible artist</p>
+            </section>
+            <h2 hidden>Inspiration Exposition</h2>
+            <p class="aboutLeft expo expo2">///////////////////<br>This is the current design. It was designed mostly from a redhead type, with sadism potential.</p>
+            <p class="aboutLeft down">There was also design 3 (kure~pu on Danbooru), however in the end Tav herself gave a vague request about a red hair, tavern style setting, and Kira asked his friend @EmonPH to draw the logo (bottom). Thanks again~</p>
+            <section class="picNCred downImg">
+                <h2 hidden>Design number 3</h2>
+                <img src="../media/Design3.jpg" class="refImg des3" alt="Design 3">
+                <p class="Elaboration">Art: Kure~pu on Danbooru. If you know you know.</p>
+            </section>
+            <section class="picNCred downImg">
+                <h2 hidden>Design number 4</h2>
+                <img src="../media/tavernLogo.png" class="refImg des4" alt="Design 4">
+                <p class="Elaboration">Art: EmonPH on youtube. He doesn't post any art stuff there tho :p</p>
+            </section>
         </article>
+        <script src="../scripts/mousetrailer.js"></script>
     </body>
 </html>
