--- a/styles/contacts.css
+++ b/styles/contacts.css
@@ -1,6 +1,3 @@
-/* ---------------------------------------- */
-/* ---------------Making grid-------------- */
-/* ---------------------------------------- */
 .container{
     
     position: relative;
@@ -26,13 +23,15 @@
     height: 100%;
     text-decoration: none;
     color: rgb(255, 255, 255);
+    font-size: max(1vw,12px);
+    
 }
 .socialIcon{
     height: 100px;
     width: 100px;
     align-self: center;
 }
-h1{
+h2{
     font-size: 3em;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
